--- a/app/views/spree/blogs/admin/blogs/index.html.erb
+++ b/app/views/spree/blogs/admin/blogs/index.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'spree/admin/shared/configuration_menu' %>
+<%= render :partial => 'spree/admin/shared/sub_menu/configuration' %>
 
 <% content_for :page_title do %>
   <%= t(:listing_blogs) %>
@@ -18,8 +18,9 @@
       <td><%= blog.name %></td>
       <td><%= blog.permalink %></td>
       <td class="actions">
-      	<%= link_to_edit blog, no_text: true %> &nbsp;
-      	<%= link_to_delete blog, no_text: true %>
+      	<%= link_to_with_icon 'icon-edit', t(:edit), edit_admin_blog_url(blog), :no_text => true, :data => {:action => 'edit'} %>
+        &nbsp;
+        <%= link_to_delete blog, { :url => admin_blog_url(blog), :no_text => true } %>
       </td>
     </tr>
     <% end %>
