--- a/app/views/spree/blogs/post_categories/show.html.erb
+++ b/app/views/spree/blogs/post_categories/show.html.erb
@@ -1,11 +1,16 @@
-<div class="posts" data-hook="post-categories-show">
+<% self.title = @category.name + ( params[:page] ? " | stran #{params[:page]}" : "" ) + " - " + @blog.name %>
+<% content_for :wrapper_class do %>blog<% end %>
+<h1 class="twelve columns"><%= @blog.name %> <i class="icon-angle-right"></i> <%=@category.name %></h1>
+
+<ul class="posts content asRows clearfix cb fw300" data-hook="post-categories-show">
+
   <%= render :partial => 'spree/blogs/shared/preview', :collection => @posts, :as => :post %>
-  
-  <br class="clear"/>
 
-  <%= paginate @posts %>
 
-</div>  
+</ul>
+
+<%= paginate @posts %>
+
 
 <% content_for :sidebar do %>
   <%= render :partial => 'spree/blogs/shared/sidebar' %>
