--- a/app/views/spree/blogs/posts/index.html.erb
+++ b/app/views/spree/blogs/posts/index.html.erb
@@ -1,15 +1,24 @@
-<div class="posts" data-hook="posts-index">
-  <% if @posts.blank? %>
-    <h1><%= t('spree.blogs.no_posts') %></h1>
-  <% else %>
-    <%= render :partial => 'spree/blogs/shared/preview', :collection => @posts, :as => :post %>
-  <% end %>
-  <br class="clear"/>
+<% self.title = (params[:query] ? params[:query] + " - " : "") + @blog.name + (params[:page] ? " | " + params[:page] : "") %>
+<% content_for :wrapper_class do %>blog<% end %>
 
-  <%#= link_to(image_tag('blog/rss.png', :alt => t('spree.blogs.posts.index.rss')) + t('spree.blogs.posts.index.rss'), blog_posts_path(@blog, :format => 'rss'), :id => "posts-rss") %>
-  <%= paginate @posts %>
+<%= link_to blog_posts_path(@blog, :format => 'rss'), :id => "posts-rss", :class => "db", :style => "margin-right:10px;line-height:30px;" do %>
+  <%#= image_tag 'blog/rss.png', :alt => t('spree.blogs.posts.index.rss') %>
+  <i class="icon-rss"></i>
+  <%= t('spree.blogs.posts.index.rss') %>
+<% end %>
 
-</div>  
+<% if @posts.blank? %>
+  <h1><%= t('spree.blogs.no_posts') %></h1>
+<% else %>
+  <ul class="posts content asRows clearfix cb fw300" data-hook="posts-index">
+
+      <%= render :partial => 'spree/blogs/shared/preview', :collection => @posts, :as => :post %>
+
+  </ul>
+<% end %>
+
+
+<%= paginate @posts %>
 
 <% content_for :sidebar do %>
   <%= render :partial => 'spree/blogs/shared/sidebar' %>
