--- a/app/views/spree/blogs/shared/_archive.html.erb
+++ b/app/views/spree/blogs/shared/_archive.html.erb
@@ -1,27 +1,13 @@
 <div class="post-archive">
-  <% posts.group_by(&:year).each do |year, posts_by_year| %>
-    <h4 class="year"><%= link_to year, post_date_path(@blog, year) %></h4>
-    <% index = 0 %>
-    <% posts_by_year.group_by(&:month).each do |month, posts_by_month| %>
-      <div class="month<%= ' alt' if (index += 1) % 2 == 0 %>">
-        <h5 class="month"><%= link_to "#{Date::MONTHNAMES[month]} #{year}", post_date_path(@blog, year, month) %></h5>
-        <ul class="archive">
-          <% posts_by_month.group_by(&:day).each do |day, posts_by_day| %>
-            <li>    
-              <span class="day">
-                <%= link_to day, post_date_path(@blog, year, month, day) %>
-              </span>
-              <ul class="posts">
-                <% posts_by_day.each_with_index do |post, index| %>
-                  <li><%= link_to h(post.title), post_seo_path(@blog, post) %></li>
-                <% end %>
-              </ul>
-              <br class="clear"/>
-            </li>     
-          <% end %> 
-        </ul>
-      </div>
-    <% end %>
-    <br class="clear"/>
-  <% end %>
+  <ul class="archive">
+    <li>
+      <ul class="posts badgeList w100p">
+        <% posts.each do |post| %>
+          <li <% if @post && post.title == @post.title %> class="current"<% end %> >
+            <%= link_to h(post.title), post_seo_path(@blog, post) %>
+          </li>
+        <% end %>
+      </ul>
+    </li>
+  </ul>
 </div>
