--- a/app/views/spree/blogs/shared/_sidebar.html.erb
+++ b/app/views/spree/blogs/shared/_sidebar.html.erb
@@ -1,26 +1,39 @@
-<div class="post-sidebar" data-hook="post-sidebar">
+<div class="post-sidebar four columns eightOnLandscape" data-hook="post-sidebar">
 
-  <h3><%= t('.recent_posts') %></h3>  
+  <ul id="blogTabs" class="nav nav-tabs cb1 horizontal lsn m0 clearfix hideOnLTELandscape1">
+    <li <% if (@post && @post.blog.permalink == 'blog') || (@posts && @posts.first.blog.permalink == 'blog')%> class="active"<% end %>>
+      <a href="/blog" title="Blog" class="cp">Blog</a>
+    </li>
+    <li <% if (@post && @post.blog.permalink != 'blog') || (@posts && @posts.first.blog.permalink != 'blog')%> class="active"<% end %>>
+      <a href="/clanki" title="Članki" class="cp">Članki</a>
+    </li>
+
+  </ul>
+  <div class="pr mb1lh" style="border-bottom:2px solid #e8e8e8;z-index:0;"></div>
+
+  <h6 class="sidebarTitle"><%= t('.recent_posts') %></h6>
   <%= render 'spree/blogs/shared/archive', :posts => @archive_posts %>
-  
-  <p class="more"><%= link_to t('.view_archive'), archive_posts_path(@blog) %></p>
-  
+
+  <p class="badgeList filterList more mt0 mb1lh">
+    <%= link_to t('.view_archive'), archive_posts_path(@blog) %>
+  </p>
+
   <div class="post-categories" data-hook="post-categories">
-    <h3><%= t('.categories') %></h3>
-    <ul>
+    <h6 class="sidebarTitle"><%= t('.categories') %></h6>
+    <ul class="badgeList">
       <% @post_categories.each do |category| %>
         <li><%= link_to category.name, post_category_path(@blog, category.permalink) %></li>
       <% end %>
     </ul>
   </div>
-  
+
   <div class="tag-cloud" data-hook="post-tag-cloud">
-    <h3><%= t('.tags') %></h3>
-    <ul class="tags">
-      <% tag_cloud @tags, %w(neat cool rad awesome) do |tag, css_class| %>
+    <h6 class="sidebarTitle"><%= t('.tags') %></h6>
+    <ul class="tags sideList">
+      <% @tags.each do |tag, css_class| %>
         <li><%= link_to tag.name, search_posts_path(@blog, tag.name), :class => css_class %></li>
       <% end %>
     </ul>
   </div>
-  
+
 </div>
