--- a/app/views/spree/blogs/admin/post_products/_related_products_table.html.erb
+++ b/app/views/spree/blogs/admin/post_products/_related_products_table.html.erb
@@ -1,16 +1,22 @@
-<table class="index">
+<table class="table table-bordered table-striped index blog-related-products">
   <thead>
     <tr>
-      <th><%= t('name') %></th>
-      <th class="actions"></th>
+      <th><%= t(:sku) %></th>
+      <th colspan="2"><%= t(:name) %></th>
+      <th><%= t(:master_price) %></th>
+      <th data-hook="admin_products_index_header_actions" class="actions"></th>
     </tr>
   </thead>
   <tbody>
     <% post.post_products.each do |post_product| %>
-      <tr id="<%= dom_id post_product %>">
-        <td><%= post_product.product.name %></td>
-        <td width="70px" class="actions">
-          <%= link_to_delete post_product, {:url => admin_post_product_url(post, post_product), no_text: true} %>
+      <% product = post_product.product %>
+      <tr <%= "style='color: red;'" if product.deleted? %> id="<%= spree_dom_id product %>" data-hook="admin_products_index_rows" class="<%= cycle('odd', 'even') %>">
+        <td class="align-center"><%= product.sku rescue '' %></td>
+        <td class="align-center"><%= mini_image(product) %></td>
+        <td><%= link_to product.try(:name), edit_admin_product_path(product) %></td>
+        <td class="align-center"><%= product.display_price rescue '' %></td>
+        <td class="actions">
+          <%= link_to_delete post_product, { :url => admin_post_product_url(@post, post_product), :no_text => true } %>
         </td>
       </tr>
     <% end %>
