--- a/app/views/spree/blogs/admin/posts/index.html.erb
+++ b/app/views/spree/blogs/admin/posts/index.html.erb
@@ -4,56 +4,74 @@
 
 <% content_for :page_actions do %>
   <li id="new_post_link">
-    <%= button_link_to t('.new_post'), new_object_url, { :icon => 'icon-plus', :id => 'admin_new_post' } %>
+    <%= link_to t('.new_post'), new_admin_post_path, { :icon => 'icon-plus', :id => 'admin_new_post' } %>
   </li>
 <% end %>
 
 <%= render :partial => 'spree/admin/shared/contents_sub_menu' %>
 
-<table class="index">
-  <thead>
-	<tr>
-    	<th><%= sort_link @search, :title, t("activerecord.attributes.post.title") %></th>
-    	<th><%= sort_link @search, :blog,  t("activerecord.attributes.blog.model_name") %></th>
-    	<th><%= sort_link @search, :posted_at, t("activerecord.attributes.post.posted_at") %></th>
-    	<th><%= sort_link @search, :live, t("activerecord.attributes.post.live") %></th>
-    	<th class="actions"><%= t("action") %></th>
-	</tr>
-  </thead>
-  <tbody>
-    <%- @collection.each do |post|%>
-    <tr id="<%= dom_id post %>">
-      <td><%= link_to post.title, object_url(post) %></td>
-      <td><%= post.blog.nil? ? "n/a" : link_to(post.blog.name, admin_posts_path(:q => { :blog_id_eq => post.blog_id })) %></td>
-      <td><%= l post.posted_at %></td>
-      <td><%= post.live ? 'Yes' : 'No' %></td>
-      <td class="actions">
-      	<%= link_to_edit post, no_text: true %> &nbsp;
-      	<%= link_to_delete post, no_text: true %>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+
+  <%= search_form_for [:admin, @search] do |f| %>
+    <div class="row">
+      <div class="date-range-filter col-md-8">
+        <div class="form-group">
+          <div class="col-md-6">
+            <div class="form-group">
+              <%= f.label :blog_id_eq, t("activerecord.attributes.blog.model_name") %>
+              <%#= f.select :blog_id_eq, Spree::Blog.to_options, :selected => (params[:q][:blog_id_eq] if params[:q]), :include_blank => true, html: { :class => 'select2 js-filterable' } %>
+              <%= f.select :blog_id_eq, Spree::Blog.to_options, {:include_blank => true, :selected => (params[:q][:blog_id_eq] if params[:q])}, :class => 'select2 js-filterable' %>
+
+              </div>
+            </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <%= f.label :title_cont, t("activerecord.attributes.post.title") %><br />
+              <%= f.text_field :title_cont, :size => 25, :class => 'form-control js-quick-search-target' %>
+            </div>
+          </div>
+          <div class="col-md-6 form-actions"><%= button t("search") %></div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
+<div class="row">
+  <div class="col-md-12">
+    <table class="table table-bordered index posts-list">
+      <thead>
+    	<tr>
+        	<th><%= sort_link @search, :title, t("activerecord.attributes.post.title") %></th>
+        	<th><%= sort_link @search, :blog,  t("activerecord.attributes.blog.model_name") %></th>
+        	<th><%= sort_link @search, :posted_at, t("activerecord.attributes.post.posted_at") %></th>
+        	<th><%= sort_link @search, :live, t("activerecord.attributes.post.live") %></th>
+        	<th class="actions"><%#= t("action") %></th>
+    	</tr>
+      </thead>
+      <tbody>
+        <%- @collection.each do |post|%>
+        <tr id="<%= dom_id post %>">
+          <td><%= link_to post.title, edit_admin_post_url(post) %></td>
+          <td><%= post.blog.nil? ? "n/a" : link_to(post.blog.name, admin_posts_path(:q => { :blog_id_eq => post.blog_id })) %></td>
+          <td><%= l post.posted_at %></td>
+          <td><%= post.live ? 'Yes' : 'No' %></td>
+          <td class="actions" style="display:inline">
+          	<%= link_to edit_admin_post_path(post), :no_text => true, :class => "btn btn-primary btn-sm" do %>
+              <span class="glyphicon glyphicon-pencil"></span>
+            <% end %>
+             &nbsp;
+          	<%= link_to [:admin, post], method: :delete, no_text: true, remote: true, :class => "btn btn-danger btn-sm" do %>
+              <span class="glyphicon glyphicon-remove"></span>
+            <% end %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 <%= paginate @collection %>
 
 <% content_for :sidebar_title do %>
   <%= t(:search) %>
-<% end %>
-
-<% content_for :sidebar do %>
-  <div class="box">
-    <%= search_form_for [:admin, @search] do |f| %>
-      <div class="field">
-        <%= f.label :blog_id_eq, t("activerecord.attributes.blog.model_name") %><br />
-        <%= f.select :blog_id_eq, Spree::Blog.to_options, :selected => (params[:q][:blog_id_eq] if params[:q]), :include_blank => true, html: { class: :select2 } %>
-      </div>
-      <div class="field">
-        <%= f.label :title_cont, t("activerecord.attributes.post.title") %><br />
-        <%= f.text_field :title_cont, :size => 25 %>
-      </div>
-      <div class="field"><%= button t("search") %></div>
-    <% end %>
-  </div>
 <% end %>
