--- a/app/views/spree/blogs/admin/posts/new.html.erb
+++ b/app/views/spree/blogs/admin/posts/new.html.erb
@@ -1,3 +1,10 @@
+<%= tinymce_assets %>
+<script type="text/javascript">
+    $(window).load(function() {
+      <%= tinymce_javascript %>
+    });
+</script>
+
 <% content_for :page_title do %>
   <%= t(:new_post) %>
 <% end %>
@@ -6,7 +13,7 @@
 
 <%= form_for([:admin, @post]) do |f| %>
   <fieldset>
-    <%= render "form", :form => f %>
+    <%= render "form", :f => f %>
     <%= render :partial => 'spree/admin/shared/new_resource_links' %>
   </fieldset>
 <% end %>
