disqus comments are removed from blog page

--- a/app/views/spree/blogs/posts/show.html.erb
+++ b/app/views/spree/blogs/posts/show.html.erb
@@ -95,7 +95,7 @@
   </div>
   <% end %>
 
-  <%= render "spree/blogs/shared/disqus_comments" %>
+  <%#= render "spree/blogs/shared/disqus_comments" %>
 
 </div>
 
