--- a/app/views/spree/blogs/admin/disqus_settings/edit.html.erb
+++ b/app/views/spree/blogs/admin/disqus_settings/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'spree/admin/shared/configuration_menu' %>
+<%#= render :partial => 'spree/admin/shared/configuration_menu' %>
 
 <h1><%= t('spree.blogs.settings.disqus') %></h1>
 
