--- a/app/views/spree/blogs/admin/shared/_blog_config.html.erb
+++ b/app/views/spree/blogs/admin/shared/_blog_config.html.erb
@@ -1,2 +1,2 @@
 <%= configurations_sidebar_menu_item t("spree.blogs.settings.blogs"), admin_blogs_path %>
-<%= configurations_sidebar_menu_item t("spree.blogs.settings.disqus"), edit_admin_disqus_settings_path %>
+<%#= configurations_sidebar_menu_item t("spree.blogs.settings.disqus"), edit_admin_disqus_settings_path %>
