--- a/app/views/spree/blogs/admin/posts/new.html.erb
+++ b/app/views/spree/blogs/admin/posts/new.html.erb
@@ -6,7 +6,7 @@
 </script>
 
 <% content_for :page_title do %>
-  <%= t(:new_post) %>
+  <%= Spree.t(:new_post) %>
 <% end %>
 
 <%= render :partial => 'spree/shared/error_messages', :locals => { :target => @post } %>
