--- a/app/views/spree/blogs/admin/blogs/edit.html.erb
+++ b/app/views/spree/blogs/admin/blogs/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'spree/admin/shared/configuration_menu' %>
+<%#= render :partial => 'spree/admin/shared/configuration_menu' %>
 
 <h1>Edit Blog</h1>
 
@@ -8,8 +8,8 @@
 
 <%= form_for([:admin, @blog]) do |f| %>
   <%= render "form", :form => f %>
-  <p class="form-buttons">
-    <%= button t("update") %> <%= t('or') %> <%= link_to t('cancel'), collection_url %>
+  <p class="form-buttons" style="margin-top:20px;">
+    <%= button Spree.t("update") %> <%= Spree.t('or') %> <%= link_to Spree.t('cancel'), collection_url, class: "btn btn-danger" %>
   </p>
 <% end %>
 
