--- a/app/views/spree/blogs/admin/post_images/_form.html.erb
+++ b/app/views/spree/blogs/admin/post_images/_form.html.erb
@@ -3,6 +3,6 @@
   <%= form.file_field :attachment %>
 </p>
 <p>
-  <%= form.label :alt %>:<br/>
-  <%= form.text_field :alt, :class => 'text' %>
+  <%= form.label :alt, t('description') %>:<br/>
+  <%= form.text_field :alt, :class => 'text form-control' %>
 </p>
