--- a/app/views/spree/blogs/admin/post_images/index.html.erb
+++ b/app/views/spree/blogs/admin/post_images/index.html.erb
@@ -1,11 +1,14 @@
 <%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Images"} %>
 
-<table class="index sortable" data-sortable-link="<%= update_positions_admin_post_images_url(@post) -%>">
+<div id="images"></div>
+<br/>
+
+<table class="index sortable table table-bordered" data-sortable-link="<%= update_positions_admin_post_images_url(@post) -%>">
   <thead>
     <tr>
       <th><%= t("thumbnail") %></th>
       <th><%= t("alt_text") %></th>
-      <th class="actions"><%= t("action") %></th>
+      <th class="actions"></th>
     </tr>
   </thead>
   <tbody>
@@ -23,12 +26,9 @@
   </tbody>
 </table>
 
-<div id="images"></div>
-<br/>
-
 <% content_for :page_actions do %>
   <li id="new_product_link">
-    <%= button_link_to t("new_image"), new_admin_post_image_url(@post), :id => "new_image_link", icon: 'icon-plus' %>
+    <%= button_link_to t("new_image"), new_admin_post_image_url(@post), :id => "new_image_link", icon: 'icon-plus', class: 'btn-success' %>
   </li>
 <% end %>
 
@@ -39,9 +39,12 @@
       jQuery('#new_image_link').click(function (event) {
         event.preventDefault();
         jQuery(this).hide();
-        jQuery.ajax({type: 'GET', url: this.href, data: ({authenticity_token: AUTH_TOKEN}), success: function(r){ jQuery('#images').html(r);} });
+        jQuery.ajax({type: 'GET', url: this.href, data: ({authenticity_token: AUTH_TOKEN}), success: function(r){
+            jQuery('#images').html(r);
+            $('#new_post_image').closest('#main-part').css('margin-left', '15px');
+          }
+        });
       });
-
     });
   </script>
 <% end %>
