--- a/app/views/spree/blogs/admin/post_products/index.html.erb
+++ b/app/views/spree/blogs/admin/post_products/index.html.erb
@@ -13,6 +13,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <%= label_tag :product, Spree.t('products') %>
+                <%= f.select :product, Spree::Product.pluck(:name, :id), {:include_blank => true}, :class => 'select2 js-filterable' %>
                 <%#= f.select :product, Spree::Product.all.map {|s| [s.name, s.id]}, {:include_blank => true}, :class => 'select2 js-filterable' %>
               </div>
             </div>
