--- a/app/views/spree/blogs/admin/post_categories/index.html.erb
+++ b/app/views/spree/blogs/admin/post_categories/index.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Categories"} %>
+<%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Categories", post: @post} %>
 
 <div id="new_category"></div>
 
