--- a/app/views/spree/blogs/admin/post_images/index.html.erb
+++ b/app/views/spree/blogs/admin/post_images/index.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Images"} %>
+<%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Images", post: @post} %>
 
 <div id="images"></div>
 <br/>
