--- a/app/views/spree/blogs/admin/posts/show.html.erb
+++ b/app/views/spree/blogs/admin/posts/show.html.erb
@@ -1,17 +1,17 @@
 <%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Post Details"} %>
-<p>posted in <%= link_to @post.blog.name, edit_admin_blog_path(@post.blog) %></p>
-<h4><%= h @post.posted_at.strftime('%A %B %d, %Y at %I:%M%p').gsub(/\s0/, ' ') %></h4>
+<p>posted in <%= link_to @object.blog.name, edit_admin_blog_path(@object.blog) %></p>
+<h4><%= h @object.posted_at.strftime('%A %B %d, %Y at %I:%M%p').gsub(/\s0/, ' ') %></h4>
 <br/>
 
-<% for image in @post.images do %>
-  <%= image_tag image.attachment.url(:small), :alt => @post.title %>
+<% for image in @object.images do %>
+  <%= image_tag image.attachment.url(:small), :alt => @object.title %>
 <% end %>
 
-<%= RDiscount.new(@post.body).to_html.html_safe %>
+<%= RDiscount.new(@object.body).to_html.html_safe %>
 
 <br class="clear" />
 
 <p>
-  <%= link_to_edit @post %> &nbsp;
+  <%= link_to_edit @object %> &nbsp;
   <%= link_to t('back'), collection_url %>
 </p>
