--- a/app/views/spree/blogs/admin/post_images/new.html.erb
+++ b/app/views/spree/blogs/admin/post_images/new.html.erb
@@ -1,9 +1,9 @@
-<%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Images"} unless request.xhr? %>
+<%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Images", post: @post} unless request.xhr? %>
 
 
-<%= render 'spree/shared/error_messages', :target => @post_image %>
+<%= render 'spree/shared/error_messages', :target => @object %>
 
-<%= form_for(@post_image, :url => admin_post_images_path(@post), :html => { :multipart => true }) do |form| %>
+<%= form_for(@object, :url => admin_post_images_path(@post), :html => { :multipart => true }) do |form| %>
   <fieldset>
     <legend><%= t("new_image") %></legend>
     <%= render "form", :form => form %>
