--- a/app/views/spree/blogs/admin/post_products/edit.html.erb
+++ b/app/views/spree/blogs/admin/post_products/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Images"} %>
+<%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Images", post: @post} %>
 
 <% if @post_product.try(:errors).present? %>
   <%= render 'spree/shared/error_messages', :target => @post_product %>
