--- a/app/views/spree/blogs/admin/post_products/index.html.erb
+++ b/app/views/spree/blogs/admin/post_products/index.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Related Products"} %>
+<%= render :partial => 'spree/blogs/admin/shared/post_tabs', :locals => {:current => "Related Products", post: @post} %>
 
 <% content_for :page_title do %>
   - Related Products
@@ -14,7 +14,6 @@
               <div class="form-group">
                 <%= label_tag :product, Spree.t('products') %>
                 <%= f.select :product, Spree::Product.pluck(:name, :id), {:include_blank => true}, :class => 'select2 js-filterable' %>
-                <%#= f.select :product, Spree::Product.all.map {|s| [s.name, s.id]}, {:include_blank => true}, :class => 'select2 js-filterable' %>
               </div>
             </div>
             <div class="form-actions">
